# quizzer-c

./: COPYING  configure.ac
common/: Makefile.am  assert.c  assert.h  c-strings.c  c-strings.h  except.c  except.h  fmt.c  fmt.h  mem.c  mem.h
data/: quiz.txt
src/: Makefile.am  argparse.h  quizzer.c
